<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">悟空理财</string>
    <string name="app_name_test">悟空理财(预览)</string>
    <string name="dcloud_gallery_app_name">@string/app_name</string>
    <string name="define_roundedimageview" />
    <string name="growingio_project_id">805f4f59955f89e2</string>
    <string name="growingio_url_scheme">growing.ce1f652883f8f979</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="ysf_activity_file_download">文件预览</string>
    <string name="ysf_audio_current_mode_is_earphone">当前为听筒模式</string>
    <string name="ysf_audio_current_mode_is_speaker">当前为扬声器模式</string>
    <string name="ysf_audio_is_playing_by_earphone">正在使用听筒播放</string>
    <string name="ysf_audio_play_by_earphone">使用听筒播放</string>
    <string name="ysf_audio_play_by_speaker">使用扬声器播放</string>
    <string name="ysf_audio_record_alert">说话时间太短</string>
    <string name="ysf_audio_record_cancel_tip">松开手指，取消发送</string>
    <string name="ysf_audio_record_error">录音失败，请重试</string>
    <string name="ysf_audio_record_init_failed">初始化录音失败</string>
    <string name="ysf_audio_record_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="ysf_audio_record_reach_max_duration">录音达到最大时间，是否发送？</string>
    <string name="ysf_audio_record_sdcard_not_exist_error">请插入SD卡</string>
    <string name="ysf_audio_record_time_is_up_tips">说话时间已到%1$d秒</string>
    <string name="ysf_audio_record_timer_default">00:00</string>
    <string name="ysf_audio_record_touch_to_record">按住 说话</string>
    <string name="ysf_audio_record_up_to_complete">松开 结束</string>
    <string name="ysf_audio_switch_to_earphone">已从扬声器切换为听筒播放</string>
    <string name="ysf_audio_switch_to_speaker">已从听筒切换为扬声器播放</string>
    <string name="ysf_audio_translate">语音转换文字</string>
    <string name="ysf_audio_translate_failed">转换失败</string>
    <string name="ysf_audio_translate_to_text_failed">语音转文字失败</string>
    <string name="ysf_audio_under_translating">转换中…</string>
    <string name="ysf_bot_load_more_disabled">会话已关闭，无法加载</string>
    <string name="ysf_bot_order_list_title">请选择你想咨询的订单</string>
    <string name="ysf_cancel">取消</string>
    <string name="ysf_compatible_image_format_tips">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="ysf_copy_has_blank">复 制</string>
    <string name="ysf_custom_attachment">自定义消息</string>
    <string name="ysf_delete_has_blank">删 除</string>
    <string name="ysf_dialog_close_session">确认退出对话？</string>
    <string name="ysf_dialog_message_queue">是否继续咨询在线客服？您可以先去逛逛，排队成功后将提醒您</string>
    <string name="ysf_dialog_quit_queue">确认退出排队？</string>
    <string name="ysf_download_network_not_available">当前网络不可用，请检查你的网络</string>
    <string name="ysf_download_tips_message">检测到您处于非WIFI环境下，下载文件将产生手机流量，是否确认继续下载？</string>
    <string name="ysf_download_tips_sure">确认下载</string>
    <string name="ysf_download_tips_title">下载文件将产生手机流量</string>
    <string name="ysf_empty" />
    <string name="ysf_evaluation">评价</string>
    <string name="ysf_evaluation_btn_submit">提交</string>
    <string name="ysf_evaluation_common">一般</string>
    <string name="ysf_evaluation_complete">已评价</string>
    <string name="ysf_evaluation_dialog_et_hint_remark">备选（选填）</string>
    <string name="ysf_evaluation_dialog_message">是否放弃评价，放弃后不可恢复</string>
    <string name="ysf_evaluation_dissatisfied">不满意</string>
    <string name="ysf_evaluation_message_item_btn">评价</string>
    <string name="ysf_evaluation_message_item_text">感谢您的咨询，请对我们的服务做出评价</string>
    <string name="ysf_evaluation_much_dissatisfied">非常不满意</string>
    <string name="ysf_evaluation_much_satisfied">非常满意</string>
    <string name="ysf_evaluation_result">：&lt;b>%s&lt;/b>。非常感谢！</string>
    <string name="ysf_evaluation_result_default_prefix">你对我们的服务评价为</string>
    <string name="ysf_evaluation_satisfied">满意</string>
    <string name="ysf_evaluation_submit_net_error_text">网络连接失败，请稍后再试</string>
    <string name="ysf_evaluation_tips">请对我们的服务做出评价</string>
    <string name="ysf_file_download">下载</string>
    <string name="ysf_file_download_fail">文件下载失败</string>
    <string name="ysf_file_download_file_size">文件大小：%s</string>
    <string name="ysf_file_download_progress">正在下载…(%1$s/%2$s)</string>
    <string name="ysf_file_invalid">文件已失效</string>
    <string name="ysf_file_open">用其他应用打开</string>
    <string name="ysf_file_open_fail">暂无可打开该文件的应用</string>
    <string name="ysf_file_open_tips">七鱼暂时无法打开此类文件，可使用其他应用打开并预览</string>
    <string name="ysf_file_out_of_date">文件已过期，不能下载</string>
    <string name="ysf_i_know">知道了</string>
    <string name="ysf_image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="ysf_image_download_failed">图片下载失败</string>
    <string name="ysf_image_out_of_memory">内存不足</string>
    <string name="ysf_image_retake">重拍</string>
    <string name="ysf_image_send_bundle_confirm">是否发送这些原始图片？</string>
    <string name="ysf_image_send_confirm">是否发送该原始图片？</string>
    <string name="ysf_image_show_error">图片显示异常</string>
    <string name="ysf_image_total_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="ysf_image_unknown_size">未知大小</string>
    <string name="ysf_input_panel_location">位 置</string>
    <string name="ysf_input_panel_photo">图 片</string>
    <string name="ysf_input_panel_take">拍 摄</string>
    <string name="ysf_input_panel_video">视 频</string>
    <string name="ysf_menu_close_session">退出</string>
    <string name="ysf_menu_request_staff">人工客服</string>
    <string name="ysf_menu_shop_name">商家</string>
    <string name="ysf_msg_quit_queue_failed">退出排队失败，请稍后再试</string>
    <string name="ysf_msg_quit_session_failed">退出对话失败，请稍后再试</string>
    <string name="ysf_msg_quit_session_tips">您退出了咨询</string>
    <string name="ysf_no_permission_audio_error">消息未下载完毕或者消息错误！</string>
    <string name="ysf_no_permission_camera">没有权限，无法拍照！</string>
    <string name="ysf_no_permission_photo">没有权限，无法打开相册！</string>
    <string name="ysf_no_permission_save_image">没有权限，无法保存图片！</string>
    <string name="ysf_no_permission_send_audio">没有权限，无法发送语音！</string>
    <string name="ysf_no_staff">当前客服不在线，如需帮助请留言</string>
    <string name="ysf_no_staff_disabled">客服不在线，不支持留言</string>
    <string name="ysf_notifier_new_message">新消息</string>
    <string name="ysf_ok">确定</string>
    <string name="ysf_picker_image_album_empty">相册中没有图片！</string>
    <string name="ysf_picker_image_album_loading">相册加载中…</string>
    <string name="ysf_picker_image_choose_from_photo_album">从手机相册选择</string>
    <string name="ysf_picker_image_error">目前仅支持jpg/png/bmp/gif格式图片的传送</string>
    <string name="ysf_picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="ysf_picker_image_folder">相册</string>
    <string name="ysf_picker_image_folder_info">共%d张</string>
    <string name="ysf_picker_image_preview">预览</string>
    <string name="ysf_picker_image_preview_original">发送原图</string>
    <string name="ysf_picker_image_preview_original_select">发送原图(%s)</string>
    <string name="ysf_picker_image_sdcard_not_enough_error">SD卡被拔出存储空间不足，无法保存此次多媒体消息</string>
    <string name="ysf_picker_image_send">发送</string>
    <string name="ysf_picker_image_send_select">完成(%d)</string>
    <string name="ysf_picture_save_fail">图片保存失败</string>
    <string name="ysf_picture_save_to">图片已保存到手机</string>
    <string name="ysf_ptr_load_completed">没有更多了</string>
    <string name="ysf_ptr_load_failed">加载失败，请稍后再试</string>
    <string name="ysf_ptr_load_succeed">加载成功</string>
    <string name="ysf_ptr_loading">正在加载…</string>
    <string name="ysf_ptr_pull_to_load">加载更多</string>
    <string name="ysf_ptr_pull_to_refresh">下拉刷新</string>
    <string name="ysf_ptr_refresh_failed">刷新失败，请稍后再试</string>
    <string name="ysf_ptr_refresh_succeed">刷新成功</string>
    <string name="ysf_ptr_refreshing">正在刷新…</string>
    <string name="ysf_ptr_release_to_load">释放立即加载</string>
    <string name="ysf_ptr_release_to_refresh">释放立即刷新</string>
    <string name="ysf_re_download_message">重新下载？</string>
    <string name="ysf_re_send_has_blank">重 发</string>
    <string name="ysf_re_send_message">重发消息?</string>
    <string name="ysf_request_timeout">网络连接失败，请稍后再试</string>
    <string name="ysf_requesting_staff">正在连接客服</string>
    <string name="ysf_retry_connect">重新连接</string>
    <string name="ysf_robot_answer_useful">有用</string>
    <string name="ysf_robot_answer_useless">没用</string>
    <string name="ysf_robot_evaluate_disable">会话已结束，暂不支持评价</string>
    <string name="ysf_save">保存</string>
    <string name="ysf_save_to_device">保存到手机</string>
    <string name="ysf_send"> 发送 </string>
    <string name="ysf_send_message_disallow_as_requesting">请等待连接客服成功后，再发送消息</string>
    <string name="ysf_service_in_queue">正在排队，您的前面还有%1$d个人，请稍等…</string>
    <string name="ysf_service_in_queue_hide_length">当前排队人数较多，请耐心等待…</string>
    <string name="ysf_service_product_invalid">当前没有客服在线</string>
    <string name="ysf_service_source_title_notification">通知栏</string>
    <string name="ysf_service_title_default">在线客服</string>
    <string name="ysf_some_error_happened">连接客服失败，您可以尝试</string>
    <string name="ysf_staff_assigned">%1$s为您服务</string>
    <string name="ysf_staff_assigned_with_group">%1$s的%2$s为您服务</string>
    <string name="ysf_unknown_desc">客户端版本不支持该内容</string>
    <string name="ysf_unknown_title">无法显示该内容</string>
</resources>
