<?xml version="1.0" encoding="utf-8"?>
<com.qiyukf.unicorn.widget.ResizeScrollView android:id="@id/ysf_evaluation_dialog" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/ysf_white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:background="@color/ysf_grey_f1f1f1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_black_222222" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/ysf_evaluation_tips" />
            <ImageView android:layout_gravity="end|center" android:id="@id/ysf_evaluation_dialog_close" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ysf_evaluation_dialog_close" android:contentDescription="@null" />
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/ysf_evaluation_dialog_radio_group" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" />
        <EditText android:textSize="@dimen/ysf_text_size_13" android:textColor="@color/ysf_black_80000000" android:textColorHint="@color/ysf_grey_cccccc" android:gravity="top" android:id="@id/ysf_evaluation_dialog_et_remark" android:background="@drawable/ysf_evaluation_remark_border" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="62.0dip" android:layout_marginLeft="27.0dip" android:layout_marginRight="27.0dip" android:hint="@string/ysf_evaluation_dialog_et_hint_remark" android:maxLength="100" android:imeOptions="flagNoExtractUi" />
        <Button android:enabled="false" android:textSize="@dimen/ysf_text_size_16" android:textColor="@color/ysf_btn_common_text_color_selector" android:id="@id/ysf_btn_commit" android:background="@drawable/ysf_evaluation_dialog_btn_submit_bg_selector" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="27.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="27.0dip" android:layout_marginBottom="20.0dip" android:text="@string/ysf_evaluation_btn_submit" />
    </LinearLayout>
</com.qiyukf.unicorn.widget.ResizeScrollView>