<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/textMessageLayout" android:background="@drawable/ysf_message_view_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layerType="software"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ffd8d8d8" android:layout_width="fill_parent" android:layout_height="@dimen/ysf_divider_height" />
    <RelativeLayout android:paddingTop="@dimen/ysf_bottom_component_margin_vertical" android:paddingBottom="@dimen/ysf_bottom_component_margin_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/switchLayout" android:layout_width="@dimen/ysf_message_input_height" android:layout_height="@dimen/ysf_message_input_height" android:layout_marginLeft="@dimen/ysf_bottom_component_margin_horizontal" android:layout_alignBottom="@id/editTextMessage">
            <ImageView android:id="@id/buttonAudioMessage" android:background="@drawable/ysf_message_button_bottom_audio_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:contentDescription="@string/ysf_empty" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/buttonTextMessage" android:background="@drawable/ysf_message_button_bottom_text_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:contentDescription="@string/ysf_empty" />
        </FrameLayout>
        <FrameLayout android:id="@id/audioTextSwitchLayout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ysf_bottom_component_margin_horizontal" android:layout_marginRight="@dimen/ysf_bottom_component_margin_horizontal" android:layout_toLeftOf="@id/emoji_button" android:layout_toRightOf="@id/switchLayout" android:layout_alignBottom="@id/switchLayout">
            <Button android:textSize="@dimen/ysf_text_size_14" android:textColor="@color/ysf_black_333333" android:id="@id/audioRecord" android:background="@drawable/ysf_message_input_record_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ysf_audio_record_touch_to_record" />
        </FrameLayout>
        <EditText android:textSize="@dimen/ysf_text_size_16" android:id="@id/editTextMessage" android:background="@drawable/ysf_message_input_edit_text" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="@dimen/ysf_bottom_component_margin_horizontal" android:maxHeight="72.0dip" android:minHeight="30.0dip" android:maxLines="4" android:maxLength="4500" android:layout_toLeftOf="@id/emoji_button" android:layout_toRightOf="@id/switchLayout" android:imeOptions="flagNoExtractUi" />
        <ImageView android:id="@id/emoji_button" android:layout_width="@dimen/ysf_message_input_height" android:layout_height="@dimen/ysf_message_input_height" android:layout_marginRight="@dimen/ysf_bottom_component_margin_horizontal" android:src="@drawable/ysf_message_button_bottom_emoji_selector" android:scaleType="center" android:layout_toLeftOf="@id/sendLayout" android:layout_alignBottom="@id/editTextMessage" android:contentDescription="@string/ysf_empty" />
        <FrameLayout android:id="@id/sendLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/ysf_bottom_component_margin_horizontal" android:layout_alignBottom="@id/editTextMessage" android:layout_alignParentRight="true">
            <ImageView android:layout_gravity="bottom" android:id="@id/action_list_trigger_button" android:visibility="gone" android:layout_width="@dimen/ysf_message_input_height" android:layout_height="@dimen/ysf_message_input_height" android:src="@drawable/ysf_message_button_bottom_add_selector" android:scaleType="centerInside" android:contentDescription="@string/ysf_empty" />
            <com.qiyukf.unicorn.widget.StylableTextView android:textSize="@dimen/ysf_text_size_14" android:gravity="center" android:layout_gravity="bottom" android:id="@id/send_message_button" android:layout_width="wrap_content" android:layout_height="@dimen/ysf_message_input_height" android:text="@string/ysf_send" />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>